# web-baba-ai-agent

./: .gitignore  .htaccess  DEPLOY.md  Dockerfile  FRONTEND.md  README.md  ae.php  app.py  config.py  index.php  integration-script.html  privacy-policy.php  pyproject.toml  requirements.txt  terms-conditions.php
static/: chatbot.js
templates/: chatbot.html
