[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-baba-chatbot"
version = "1.0.0"
description = "Web Baba AI Chatbot Backend"
requires-python = ">=3.8"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "openai==0.28.1",
    "gspread==5.12.0",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.1.0",
    "google-auth-httplib2==0.1.1",
    "requests==2.31.0",
    "python-dotenv==1.0.0"
]
